--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Esto es una prueba de Github y Frontend
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="utf-8" />
+	<title>Puls4: Comunidad </title>
+	<link rel="stylesheet" href="css/puls4.css" />
+</head>
+<body>
+
+</body>
+</html>
